// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicCard should be able to render a minimal subtopic 1`] = `
<div
  data-testid="topic-card"
  id="TopicCard"
>
  <div
    class="MuiBox-root css-1s8p6ck"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        data-testid="topic-title"
      >
        <a
          class="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-igcn10-MuiTypography-root-MuiLink-root"
          href="bar"
        >
          bar
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopicCard should render with minimal state 1`] = `
<div
  data-testid="topic-card"
  id="TopicCard"
>
  <div
    class="MuiBox-root css-1s8p6ck"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        data-testid="topic-title"
      >
        <a
          class="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-igcn10-MuiTypography-root-MuiLink-root"
          href="foo"
        >
          foo
        </a>
      </div>
    </div>
  </div>
</div>
`;
